# galay-mongo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
benchmark/: B1-SyncPingBench.cc  B2-AsyncPingBench.cc  B2-async_ping_bench.cc  CMakeLists.txt  b1_ping.cc  b2_ping.cc
benchmark/common/: BenchCommon.h  bench_common.h
cmake/: GalayMongoConfig.cmake.in
docs/: 00-快速开始.md  01-架构设计.md  02-API参考.md  03-使用指南.md  04-示例代码.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  release_note.md
example/import/: E1-SyncPing.cc  E2-AsyncPing.cc  E3-SyncCrud.cc  E4-AsyncPipeline.cc  E5-AsyncCommandCrud.cc
example/include/: E1-SyncPing.cc  E2-AsyncPing.cc  E3-SyncCrud.cc  E4-AsyncPipeline.cc  E5-AsyncCommandCrud.cc
examples/: CMakeLists.txt
examples/common/: ExampleConfig.h  config.h
examples/import/: E2-AsyncPing.cc  E2-async_ping.cc  E4-AsyncPipeline.cc  E4-async_pipeline.cc  E5-AsyncCommandCrud.cc  E5-async_command_crud.cc  e1_ping.cc  e2_ping.cc  e3_crud.cc  e4_pipeline.cc  e5_command.cc
examples/include/: E2-AsyncPing.cc  E2-async_ping.cc  E4-AsyncPipeline.cc  E4-async_pipeline.cc  E5-AsyncCommandCrud.cc  E5-async_command_crud.cc  e1_ping.cc  e2_ping.cc  e3_crud.cc  e4_pipeline.cc  e5_command.cc
galay-mongo/: CMakeLists.txt
galay-mongo/async/: AsyncMongoClient.cc  AsyncMongoClient.h  AsyncMongoConfig.h  MongoClient.cc  MongoClient.h  buf_provider.cc  buf_provider.h  client.cc  client.h
galay-mongo/base/: MongoError.cc  MongoLog.h  MongoValue.cc  MongoValue.h  SocketOptions.h  mongo_error.cc  mongo_value.cc
galay-mongo/module/: ModulePrelude.hpp  galay.mongo.cppm  galay_mongo.cppm  module_prelude.hpp
galay-mongo/protocol/: Bson.cc  Bson.h  Connection.cc  MongoProtocol.cc  MongoProtocol.h  bson.cc  bson.h  builder.cc  builder.h  connection.cc  connection.h  mongo_protocol.cc  mongo_protocol.h
galay-mongo/sync/: MongoClient.cc  MongoSession.cc  MongoSession.h  mongo_client.cc  mongo_client.h
test/: CMakeLists.txt  T2-SyncMongoSession.cc  T3-AsyncMongoPipeline.cc  T3-async_mongo_pipeline.cc  T4-SyncMongoFunctional.cc  T5-AsyncMongoFunctional.cc  T5-async_mongo_functional.cc  T6-AuthCompatibility.cc  T6-auth_compatibility.cc  T7-SyncLargeMessageBridge.cc  TestMongoConfig.h  config.h  reply_helper.h  t1_bson.cc  t2_client.cc  t3_pipeline.cc  t4_func.cc  t5_func.cc  t6_auth.cc  t7_bridge.cc  t8_builder.cc
