function(add_mongo_example target_name source_file)
    add_executable(${target_name} ${source_file})
    set(link_target ${PROJECT_NAME})
    if(ARGC GREATER 2)
        set(link_target ${ARGV2})
    endif()
    target_link_libraries(${target_name} PRIVATE ${link_target})
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    galay_mongo_apply_cxx(${target_name})
endfunction()

add_mongo_example(E1-SyncPing-Include include/E1-SyncPing.cc)
add_mongo_example(E2-AsyncPing-Include include/E2-AsyncPing.cc)
add_mongo_example(E3-SyncCrud-Include include/E3-SyncCrud.cc)
add_mongo_example(E4-AsyncPipeline-Include include/E4-AsyncPipeline.cc)
add_mongo_example(E5-AsyncCommandCrud-Include include/E5-AsyncCommandCrud.cc)

if(GALAY_MONGO_BUILD_MODULE_EXAMPLES_EFFECTIVE)
    set(_mongo_import_link_target ${PROJECT_NAME})
    if(TARGET ${PROJECT_NAME}-modules)
        set(_mongo_import_link_target ${PROJECT_NAME}-modules)
    endif()

    add_mongo_example(E1-SyncPing-Import import/E1-SyncPing.cc ${_mongo_import_link_target})
    add_mongo_example(E2-AsyncPing-Import import/E2-AsyncPing.cc ${_mongo_import_link_target})
    add_mongo_example(E3-SyncCrud-Import import/E3-SyncCrud.cc ${_mongo_import_link_target})
    add_mongo_example(E4-AsyncPipeline-Import import/E4-AsyncPipeline.cc ${_mongo_import_link_target})
    add_mongo_example(E5-AsyncCommandCrud-Import import/E5-AsyncCommandCrud.cc ${_mongo_import_link_target})

    if(GALAY_MONGO_IMPORT_COMPILE_OPTIONS)
        target_compile_options(E1-SyncPing-Import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(E2-AsyncPing-Import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(E3-SyncCrud-Import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(E4-AsyncPipeline-Import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(E5-AsyncCommandCrud-Import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
    endif()
endif()
