function(add_mongo_example target_name source_file)
    add_executable(${target_name} ${source_file})
    set(link_target ${PROJECT_NAME})
    if(ARGC GREATER 2)
        set(link_target ${ARGV2})
    endif()
    target_link_libraries(${target_name} PRIVATE ${link_target})
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    galay_mongo_apply_cxx(${target_name})
endfunction()

add_mongo_example(e1_ping_include include/e1_ping.cc)
add_mongo_example(e2_ping_include include/e2_ping.cc)
add_mongo_example(e3_crud_include include/e3_crud.cc)
add_mongo_example(e4_pipeline_include include/e4_pipeline.cc)
add_mongo_example(e5_command_include include/e5_command.cc)

if(GALAY_MONGO_BUILD_MODULE_EXAMPLES_EFFECTIVE)
    set(_mongo_import_link_target ${PROJECT_NAME})
    if(TARGET ${PROJECT_NAME}-modules)
        set(_mongo_import_link_target ${PROJECT_NAME}-modules)
    endif()

    add_mongo_example(e1_ping_import import/e1_ping.cc ${_mongo_import_link_target})
    add_mongo_example(e2_ping_import import/e2_ping.cc ${_mongo_import_link_target})
    add_mongo_example(e3_crud_import import/e3_crud.cc ${_mongo_import_link_target})
    add_mongo_example(e4_pipeline_import import/e4_pipeline.cc ${_mongo_import_link_target})
    add_mongo_example(e5_command_import import/e5_command.cc ${_mongo_import_link_target})

    if(GALAY_MONGO_IMPORT_COMPILE_OPTIONS)
        target_compile_options(e1_ping_import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(e2_ping_import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(e3_crud_import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(e4_pipeline_import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
        target_compile_options(e5_command_import PRIVATE ${GALAY_MONGO_IMPORT_COMPILE_OPTIONS})
    endif()
endif()
