function(add_mongo_test target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE ${PROJECT_NAME})
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    galay_mongo_apply_cxx(${target_name})
endfunction()

add_mongo_test(T1-BsonProtocol T1-BsonProtocol.cc)
add_mongo_test(T2-SyncMongoSession T2-SyncMongoSession.cc)
add_mongo_test(T3-AsyncMongoPipeline T3-AsyncMongoPipeline.cc)
add_mongo_test(T4-SyncMongoFunctional T4-SyncMongoFunctional.cc)
add_mongo_test(T5-AsyncMongoFunctional T5-AsyncMongoFunctional.cc)
add_mongo_test(T6-AuthCompatibility T6-AuthCompatibility.cc)
add_mongo_test(T7-SyncLargeMessageBridge T7-SyncLargeMessageBridge.cc)
