function(add_mongo_test target_name source_file)
    add_executable(${target_name} ${source_file})
    target_link_libraries(${target_name} PRIVATE ${PROJECT_NAME})
    target_include_directories(${target_name} PRIVATE ${CMAKE_SOURCE_DIR})
    galay_mongo_apply_cxx(${target_name})
endfunction()

add_mongo_test(t1_bson t1_bson.cc)
add_mongo_test(t2_client t2_client.cc)
add_mongo_test(t3_pipeline t3_pipeline.cc)
add_mongo_test(t4_func t4_func.cc)
add_mongo_test(t5_func t5_func.cc)
add_mongo_test(t6_auth t6_auth.cc)
add_mongo_test(t7_bridge t7_bridge.cc)
add_mongo_test(t8_builder t8_builder.cc)
